<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipesRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <!--
    card view for each recipe
    layout_height is wrap_content -> height of card view is determined by its content
    -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/row_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <!-- stuff inside recipe card -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/recipe_imageView"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_restaurant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- title: max 2 lines, if longer ellipsize(...) -->
            <TextView
                android:id="@+id/title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/courgette"
                android:maxLines="2"
                android:text="@string/textview"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipe_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- description -->
            <TextView
                android:id="@+id/description_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur"
                android:textColor="@color/darkGray"
                app:layout_constraintEnd_toEndOf="@+id/title_textView"
                app:layout_constraintStart_toStartOf="@+id/title_textView"
                app:layout_constraintTop_toBottomOf="@+id/title_textView" />

            <ImageView
                android:id="@+id/like_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/like_textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/like_textView"
                app:layout_constraintTop_toBottomOf="@+id/description_textView"
                app:layout_constraintVertical_bias="0.029"
                app:srcCompat="@drawable/ic_like"
                app:tint="@color/sapphire" />

            <TextView
                android:id="@+id/like_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:textColor="@color/sapphire"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/description_textView"
                app:layout_constraintTop_toBottomOf="@+id/like_imageView" />

            <ImageView
                android:id="@+id/clock_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/yellow"
                app:layout_constraintEnd_toEndOf="@+id/clock_textView"
                app:layout_constraintStart_toStartOf="@+id/clock_textView"
                app:layout_constraintTop_toTopOf="@+id/like_imageView"
                app:srcCompat="@drawable/ic_clock" />

            <TextView
                android:id="@+id/clock_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/__100"
                android:textColor="@color/yellow"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/like_textView"
                app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />

            <ImageView
                android:id="@+id/leaf_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/leaf_textView"
                app:layout_constraintStart_toStartOf="@+id/leaf_textView"
                app:layout_constraintTop_toTopOf="@+id/clock_imageView"
                app:srcCompat="@drawable/ic_vegan" />

            <TextView
                android:id="@+id/leaf_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/___100"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/clock_textView"
                app:layout_constraintTop_toBottomOf="@+id/leaf_imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>